--- a/admin.css
+++ b/admin.css
@@ -199,6 +199,10 @@ textarea {
   margin-top: 10px;
 }
 
+.icon.btn{
+  color: black;
+}
+
 .product-toolbar {
   display: flex;
   justify-content: space-between;
