--- a/style.css
+++ b/style.css
@@ -191,9 +191,21 @@
   color: #000;
   margin-bottom: 6px;
 }
+.product-card h4 {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.3;
+  height: 36px;             /* Fixed height */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;    /* max 2 lines */
+  -webkit-box-orient: vertical;
+}
+
 
 /* Price */
-.price {
+/* .price {
   font-size: 14px;
 }
 
@@ -214,5 +226,65 @@
   color: #388e3c;
   font-size: 12px;
   font-weight: 500;
+} */
+
+.price {
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
+
+.price .original {
+  text-decoration: line-through;
+  color: #777;
+  font-size: 13px;
+}
+
+.discounted {
+  font-weight: 600;
+  color: #000;
+}
+
+.price .off {
+  color: #388e3c;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+
+.skeleton {
+  background: #fff;
+}
+
+.skeleton-img {
+  height: 160px;
+  border-radius: 8px;
+}
+
+.skeleton-text {
+  height: 14px;
+  margin-top: 10px;
+  border-radius: 4px;
+}
+
+.skeleton-text.small {
+  width: 60%;
+}
+
+.shimmer {
+  background: linear-gradient(
+    90deg,
+    #eee 25%,
+    #f5f5f5 37%,
+    #eee 63%
+  );
+  background-size: 400% 100%;
+  animation: shimmer 1.4s ease infinite;
+}
+
+@keyframes shimmer {
+  0% { background-position: -400px 0; }
+  100% { background-position: 400px 0; }
+}
+
 
