--- a/style.css
+++ b/style.css
@@ -190,18 +190,12 @@
   font-size: 14px;
   color: #000;
   margin-bottom: 6px;
-}
-.product-card h4 {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.3;
-  height: 36px;             /* Fixed height */
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;    /* max 2 lines */
-  -webkit-box-orient: vertical;
+  max-width: 100%;
 }
+
 
 
 /* Price */
@@ -286,5 +280,6 @@
   0% { background-position: -400px 0; }
   100% { background-position: 400px 0; }
 }
+
 
 
