--- a/style.css
+++ b/style.css
@@ -388,49 +388,54 @@
 
 
 /* Bottom Navigation */
-.bottom-nav {
+.nav {
   display: none;
 }
 
 /* Mobile only */
 @media (max-width: 768px) {
-  .bottom-nav {
+.nav {
     position: fixed;
     bottom: 0;
-    left: 0;
     width: 100%;
-    height: 56px;
-    background: #fff;
-    border-top: 1px solid #eee;
+    height: 55px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
+    background-color: #ffffff;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    z-index: 2000;
-  }
+    overflow-x: auto;
+}
 
-  .bottom-nav-item {
+.nav__link {
     display: flex;
-    flex-direction: column;   /* 🔥 THIS stacks text below icon */
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2px;
-    font-size: 11px;
-    color: #555;
-    cursor: pointer;
-  }
+    flex-grow: 1;
+    min-width: 50px;
+    overflow: hidden;
+    white-space: nowrap;
+    font-family: sans-serif;
+    font-size: 13px;
+    color: #444444;
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+    transition: background-color 0.1s ease-in-out;
+}
 
-  .bottom-nav-item .material-icons {
-    font-size: 22px;
-  }
+.nav__link:hover {
+    background-color: #eeeeee;
+}
 
-  .bottom-nav-item.active {
-    color: #2874f0;
-  }
-  .bottom-nav-item.active .material-icons {
-  font-weight: 600;
+.nav__link--active {
+    color: #009578;
+}
+
+.nav__icon {
+    font-size: 18px;
 }
 
 }
+
 
 
 
